k8s/kustomize/overlays/development/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdo-dashboard
spec:
  template:
    spec:
      containers:
        - name: dashboard
          securityContext:
            allowPrivilegeEscalation: true
